[gd_scene load_steps=3 format=3 uid="uid://cagjtvcclc8bw"]

[ext_resource type="Script" uid="uid://8oqakfjvnguq" path="res://main_menu.gd" id="1_06t4h"]
[ext_resource type="Texture2D" uid="uid://c8lo7qwn1hsrk" path="res://background/menu.png" id="2_7vrkn"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06t4h")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 650.0
texture = ExtResource("2_7vrkn")
expand_mode = 3

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -380.0
offset_top = -77.0
offset_right = -100.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ButtonKacamata1" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Kacamata 1"

[node name="ButtonKacamata2" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Kacamata 2"

[node name="ButtonKacamata3" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Kacamata 3"

[node name="ButtonKacamata4" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Kacamata 4"

[node name="ButtonTentangKami" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Tentang Kami"

[node name="ButtonQuit" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[connection signal="pressed" from="ButtonContainer/ButtonKacamata1" to="." method="_on_button_kacamata_1_pressed"]
[connection signal="pressed" from="ButtonContainer/ButtonKacamata2" to="." method="_on_button_kacamata_2_pressed"]
[connection signal="pressed" from="ButtonContainer/ButtonKacamata3" to="." method="_on_button_kacamata_3_pressed"]
[connection signal="pressed" from="ButtonContainer/ButtonKacamata4" to="." method="_on_button_kacamata_4_pressed"]
[connection signal="pressed" from="ButtonContainer/ButtonTentangKami" to="." method="_on_button_tentang_kami_pressed"]
[connection signal="pressed" from="ButtonContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
